--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
                 <i class="fa fa-diamond fa-stack-1x"></i>
             </span>
             </a>
+	    <a href="terminal/index.html" target="_blank">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle-thin fa-stack-2x"></i>
+                <i class="fa fa-terminal fa-stack-1x"></i>
+            </span>
+            </a>
          </p>
       </div>
       <!--footer-->
