--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
                 <i class="fa fa-circle-thin fa-stack-2x"></i>
                 <i class="fa fa-terminal fa-stack-1x"></i>
             </span>
+		<span class="fa-stack fa-lg">
+                <i class="fa fa-circle-thin fa-stack-2x"></i>
+                <i class="fa fa-gamepad fa-stack-1x"></i>
+            </span>
             </a>
          </p>
       </div>
