--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <i class="fa fa-circle-thin fa-stack-2x"></i>
                 <i class="fa fa-terminal fa-stack-1x"></i>
             </span>
+		<a href="Nagini/index.html" target="_blank">
 		<span class="fa-stack fa-lg">
                 <i class="fa fa-circle-thin fa-stack-2x"></i>
                 <i class="fa fa-gamepad fa-stack-1x"></i>
