--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          <center><img class="center animated rollIn" src="img/ava.jpeg" alt="avatar"></center>
          <hr>
          <div class="name">
-            <a href="CV/index.html">Prabith GS</a>
+            <a href="../CV/index.html">Prabith GS</a>
          </div>
          <p class="subtitle">B.Tech CSE Udergrad  |  Reverse Engineer</p>
          <p class="location"><i class="fa fa-map-marker"> </i><a href="http://www.amrita.edu/" target="_blank"> Amrita Vishwa Vidyapeetham</a>
