--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <!--blah blah-->
+<!--just a web card-->
 <html>
    <head>
-      <title>Prabith GS: Web Card</title>
+      <title>Prabith GS: Web personal Card</title>
       <link rel="stylesheet" type="text/css" href="style.css">
       <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
       <link rel="stylesheet" type="text/css" href="css/animate.css">
@@ -79,7 +80,7 @@
       </div>
       <!--footer-->
       <footer class="animated fadeIn">
-         &copy; Prabith GS.
+         &copy; Prabith GS with <3.
       </footer>
    </body>
 </html>
